# Kivo---music

./: .gitignore  FINAL_AUDIT.md  KIVO_MASTER_PLAN.md  KivoAudioCoreCpp_Design_Planning_001_V10_1_FINAL_P0B_READY_LOCKED_PATCHED.txt  issue_list_and_fix_plan.md
KivoAudioCoreCpp/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
KivoAudioCoreCpp/docs/: AUDIO_CORE_EXECUTION_SPEC.md
KivoAudioCoreCpp/docs/architecture/: architecture_boundary_policy.md  audio_core_execution_roadmap.md  audio_core_scope_lock_policy.md  audio_truth_policy.md  commercial_release_contract.md  dependency_and_license_policy.md  design_planning_001.md  frontend_technology_stack_decision.md  host_abi_integration_contract.md  lyrics_core_boundary.md  no_empty_forest_policy.md  p0c_through_p0i_enhancement_input.md  phase_closeout_template.md  policy_index.md  qt6_frontend_design_polish_brief.md  realtime_thread_and_state_policy.md  toolchain_and_build_policy.md  validation_and_release_policy.md  windows_backend_completion_program.md
KivoAudioCoreCpp/docs/closeout/: p0_b_skeleton_governance_policy_lean_004_closeout.md  p0_j_product_state_recovery_closeout.md  p0_l_gapless_timeline_accuracy_closeout.md  p0_m_exclusive_bit_perfect_truth_closeout.md  p0_n_processing_boundary_closeout.md  p0_o_host_abi_closeout.md  p0_p_release_hardening_closeout.md  s9_performance_format_expansion_closeout.md
KivoAudioCoreCpp/docs/dependencies/: ffmpeg_lgpl_shared_7_1.md  generated_audio_test_fixtures.md
KivoAudioCoreCpp/docs/tasks/: future_phase_taskbooks.md  p0_c_001_contract_harness_and_foundational_types.md  p0_c_002_clock_domain_contract.md  p0_c_003_seek_flush_drain_contract.md  p0_c_011_playback_state_machine_semantics_family_design_task.md  p0_c_012_command_semantics_family_design_task.md  p0_c_013_observability_contract_family_design_task.md  p0_c_014_policy_boundary_family_design_task.md  p0_c_015_policy_equality_normalization_task.md  p0_c_016_observability_equality_annotation_task.md  p0_c_017_error_default_initializer_brace_normalization_task.md  p0_c_018_state_machine_default_initializer_brace_normalization_task.md  p0_c_019_cue_constexpr_equality_normalization_task.md  p0_c_019_format_negotiation_default_initializer_brace_normalization_task.md  p0_c_020_cue_constexpr_equality_normalization_task.md  p0_c_021_source_boundary_constexpr_equality_normalization_task.md  p0_c_022_command_constexpr_equality_normalization_task.md  p0_c_023_error_constexpr_equality_normalization_task.md  p0_c_024_observability_constexpr_equality_normalization_task.md  p0_c_025_policy_constexpr_equality_normalization_task.md  p0_c_026_state_machine_constexpr_equality_normalization_task.md  p0_c_027_format_descriptor_default_initializer_brace_normalization_task.md  p0_c_028_format_descriptor_constexpr_equality_normalization_task.md  p0_c_029_format_roles_constexpr_equality_normalization_task.md  p0_c_030_format_negotiation_constexpr_equality_normalization_task.md  p0_c_031_format_roles_default_initializer_brace_normalization_task.md  p0_c_032_format_negotiation_default_initializer_brace_normalization_task.md  p0_c_033_format_descriptor_constexpr_convenience_normalization_task.md  p0_c_034_format_roles_constexpr_convenience_normalization_task.md  p0_c_035_format_negotiation_constexpr_convenience_normalization_task.md  p0_c_036_command_contract_equality_spacing_normalization_task.md  p0_c_037_command_identity_equality_spacing_normalization_task.md  p0_c_038_generation_id_private_default_initializer_brace_normalization_task.md  p0_c_039_source_generation_observer_order_normalization_task.md  p0_c_040_cue_boundary_header_blank_normalization_task.md  p0_c_040_cue_range_header_spacer_normalization_task.md  p0_c_041_cue_boundary_header_blank_normalization_task.md  p0_c_042_cue_continuity_header_blank_normalization_task.md  p0_c_043_p0_c_closeout_manifest_validation_status_ledger.md  p0_c_core_contract_foundation_task.md  (+77 more)
KivoAudioCoreCpp/docs/validation/: p0_d_validation_result_classification_guide.md  p0_d_validation_tooling_usage.md  p0_f_i_audio_runtime_validation_2026_06_12.md  p0_k_windows_device_matrix_2026_06_12.md  p0_p_commercial_claim_review_2026_06_12.md  p0_p_release_matrix_2026_06_12.md  p0_q_hi_res_dsd_dop_research_2026_06_12.md  p0_r_mpv_libmpv_reference_research_2026_06_12.md  ten_hour_endurance_execution.md  windows_backend_closure_status_2026_06_13.md  windows_toolchain_setup.md
KivoAudioCoreCpp/tests/contracts/: audio_format_descriptor_tests.cpp  clock_domain_tests.cpp  contract_tests_main.cpp  contract_tests_main.h  generation_id_tests.cpp  result_tests.cpp  sample_position_tests.cpp  seek_flush_tests.cpp
KivoAudioCoreCpp/tests/decode_boundary/: decode_boundary_tests_main.cpp  decode_contract_tests.cpp  local_file_byte_source_tests.cpp
KivoAudioCoreCpp/tests/fake_renderer/: fake_renderer_test_fixture.hpp  fake_renderer_tests_main.cpp  fake_renderer_tests_main.hpp  fault_injection_tests.cpp  lifecycle_tests.cpp  manual_clock_tests.cpp  observation_history_tests.cpp  write_and_generation_tests.cpp
KivoAudioCoreCpp/tests/ffmpeg_decode/: ffmpeg_decode_tests_main.cpp  ffmpeg_session_tests.cpp
KivoAudioCoreCpp/tests/playback_pipeline/: decode_render_queue_producer_tests.cpp
KivoAudioCoreCpp/tests/render_boundary/: audio_block_view_tests.cpp  (+6 more)
KivoMusicQt/: CMakeLists.txt  README.md  build_log.txt  build_log2.txt  run.bat  run.ps1
KivoMusicQt/app/: main.cpp
KivoMusicQt/build-codex-ninja/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  kivomusicqt_qmltyperegistrations.cpp
KivoMusicQt/i18n/: kivo_en.ts  kivo_zh_CN.ts
KivoMusicQt/store/: Package.appxmanifest  STORE_LISTING.md  build_store_package.bat
KivoMusicQt/tests/: CMakeLists.txt  test_eq_preset.cpp  test_field_swap_detector.cpp  test_lyrics_parser.cpp  test_metadata_repair_pipeline.cpp  test_metadata_repair_review_queue_basic.cpp  test_metadata_repair_review_queue_filter.cpp  test_metadata_repair_review_queue_safety.cpp  test_metadata_repair_review_queue_sorting.cpp  test_play_queue.cpp  test_playback_mode.cpp
(+1311 files in other folders)
